; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp9_mc_msa.c_common_hz_8t_64w_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp9_mc_msa.c_common_hz_8t_64w_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mc_filt_mask_arr = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32, i32*, i32)* @common_hz_8t_64w_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @common_hz_8t_64w_msa(i32* %0, i32 %1, i32* %2, i32 %3, i32* %4, i32 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i64, align 8
  %23 = alloca i64, align 8
  %24 = alloca i64, align 8
  %25 = alloca i64, align 8
  %26 = alloca i64, align 8
  %27 = alloca i32, align 4
  %28 = alloca i32, align 4
  %29 = alloca i32, align 4
  %30 = alloca i32, align 4
  %31 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32* %2, i32** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  store i32 %5, i32* %12, align 4
  %32 = load i32*, i32** @mc_filt_mask_arr, align 8
  %33 = getelementptr inbounds i32, i32* %32, i64 0
  %34 = call i64 @LD_UB(i32* %33)
  store i64 %34, i64* %22, align 8
  %35 = load i32*, i32** %7, align 8
  %36 = getelementptr inbounds i32, i32* %35, i64 -3
  store i32* %36, i32** %7, align 8
  %37 = load i32*, i32** %11, align 8
  %38 = call i32 @LD_SH(i32* %37)
  store i32 %38, i32* %27, align 4
  %39 = load i32, i32* %27, align 4
  %40 = load i32, i32* %18, align 4
  %41 = load i32, i32* %19, align 4
  %42 = load i32, i32* %20, align 4
  %43 = load i32, i32* %21, align 4
  %44 = call i32 @SPLATI_H4_SB(i32 %39, i32 0, i32 1, i32 2, i32 3, i32 %40, i32 %41, i32 %42, i32 %43)
  %45 = load i64, i64* %22, align 8
  %46 = add nsw i64 %45, 2
  store i64 %46, i64* %23, align 8
  %47 = load i64, i64* %22, align 8
  %48 = add nsw i64 %47, 4
  store i64 %48, i64* %24, align 8
  %49 = load i64, i64* %22, align 8
  %50 = add nsw i64 %49, 6
  store i64 %50, i64* %25, align 8
  %51 = load i32, i32* %12, align 4
  store i32 %51, i32* %13, align 4
  br label %52

52:                                               ; preds = %56, %6
  %53 = load i32, i32* %13, align 4
  %54 = add nsw i32 %53, -1
  store i32 %54, i32* %13, align 4
  %55 = icmp ne i32 %53, 0
  br i1 %55, label %56, label %179

56:                                               ; preds = %52
  %57 = load i32*, i32** %7, align 8
  %58 = call i32 @LD_SB(i32* %57)
  store i32 %58, i32* %14, align 4
  %59 = load i32*, i32** %7, align 8
  %60 = getelementptr inbounds i32, i32* %59, i64 16
  %61 = call i32 @LD_SB(i32* %60)
  store i32 %61, i32* %16, align 4
  %62 = load i32*, i32** %7, align 8
  %63 = getelementptr inbounds i32, i32* %62, i64 24
  %64 = call i32 @LD_SB(i32* %63)
  store i32 %64, i32* %17, align 4
  %65 = load i32, i32* %16, align 4
  %66 = load i32, i32* %14, align 4
  %67 = call i32 @__msa_sldi_b(i32 %65, i32 %66, i32 8)
  store i32 %67, i32* %15, align 4
  %68 = load i32, i32* %14, align 4
  %69 = load i32, i32* %15, align 4
  %70 = load i32, i32* %16, align 4
  %71 = load i32, i32* %17, align 4
  %72 = call i32 @XORI_B4_128_SB(i32 %68, i32 %69, i32 %70, i32 %71)
  %73 = load i32, i32* %14, align 4
  %74 = load i32, i32* %15, align 4
  %75 = load i32, i32* %16, align 4
  %76 = load i32, i32* %17, align 4
  %77 = load i64, i64* %22, align 8
  %78 = load i64, i64* %23, align 8
  %79 = load i64, i64* %24, align 8
  %80 = load i64, i64* %25, align 8
  %81 = load i32, i32* %18, align 4
  %82 = load i32, i32* %19, align 4
  %83 = load i32, i32* %20, align 4
  %84 = load i32, i32* %21, align 4
  %85 = load i32, i32* %28, align 4
  %86 = load i32, i32* %29, align 4
  %87 = load i32, i32* %30, align 4
  %88 = load i32, i32* %31, align 4
  %89 = call i32 @HORIZ_8TAP_8WID_4VECS_FILT(i32 %73, i32 %74, i32 %75, i32 %76, i64 %77, i64 %78, i64 %79, i64 %80, i32 %81, i32 %82, i32 %83, i32 %84, i32 %85, i32 %86, i32 %87, i32 %88)
  %90 = load i32, i32* %28, align 4
  %91 = load i32, i32* %29, align 4
  %92 = load i32, i32* %30, align 4
  %93 = load i32, i32* %31, align 4
  %94 = call i32 @SRARI_H4_SH(i32 %90, i32 %91, i32 %92, i32 %93, i32 7)
  %95 = load i32, i32* %28, align 4
  %96 = load i32, i32* %29, align 4
  %97 = load i32, i32* %30, align 4
  %98 = load i32, i32* %31, align 4
  %99 = call i32 @SAT_SH4_SH(i32 %95, i32 %96, i32 %97, i32 %98, i32 7)
  %100 = load i32, i32* %28, align 4
  %101 = load i32, i32* %29, align 4
  %102 = call i64 @PCKEV_XORI128_UB(i32 %100, i32 %101)
  store i64 %102, i64* %26, align 8
  %103 = load i64, i64* %26, align 8
  %104 = load i32*, i32** %9, align 8
  %105 = call i32 @ST_UB(i64 %103, i32* %104)
  %106 = load i32, i32* %30, align 4
  %107 = load i32, i32* %31, align 4
  %108 = call i64 @PCKEV_XORI128_UB(i32 %106, i32 %107)
  store i64 %108, i64* %26, align 8
  %109 = load i64, i64* %26, align 8
  %110 = load i32*, i32** %9, align 8
  %111 = getelementptr inbounds i32, i32* %110, i64 16
  %112 = call i32 @ST_UB(i64 %109, i32* %111)
  %113 = load i32*, i32** %7, align 8
  %114 = getelementptr inbounds i32, i32* %113, i64 32
  %115 = call i32 @LD_SB(i32* %114)
  store i32 %115, i32* %14, align 4
  %116 = load i32*, i32** %7, align 8
  %117 = getelementptr inbounds i32, i32* %116, i64 48
  %118 = call i32 @LD_SB(i32* %117)
  store i32 %118, i32* %16, align 4
  %119 = load i32*, i32** %7, align 8
  %120 = getelementptr inbounds i32, i32* %119, i64 56
  %121 = call i32 @LD_SB(i32* %120)
  store i32 %121, i32* %17, align 4
  %122 = load i32, i32* %16, align 4
  %123 = load i32, i32* %14, align 4
  %124 = call i32 @__msa_sldi_b(i32 %122, i32 %123, i32 8)
  store i32 %124, i32* %15, align 4
  %125 = load i32, i32* %8, align 4
  %126 = load i32*, i32** %7, align 8
  %127 = sext i32 %125 to i64
  %128 = getelementptr inbounds i32, i32* %126, i64 %127
  store i32* %128, i32** %7, align 8
  %129 = load i32, i32* %14, align 4
  %130 = load i32, i32* %15, align 4
  %131 = load i32, i32* %16, align 4
  %132 = load i32, i32* %17, align 4
  %133 = call i32 @XORI_B4_128_SB(i32 %129, i32 %130, i32 %131, i32 %132)
  %134 = load i32, i32* %14, align 4
  %135 = load i32, i32* %15, align 4
  %136 = load i32, i32* %16, align 4
  %137 = load i32, i32* %17, align 4
  %138 = load i64, i64* %22, align 8
  %139 = load i64, i64* %23, align 8
  %140 = load i64, i64* %24, align 8
  %141 = load i64, i64* %25, align 8
  %142 = load i32, i32* %18, align 4
  %143 = load i32, i32* %19, align 4
  %144 = load i32, i32* %20, align 4
  %145 = load i32, i32* %21, align 4
  %146 = load i32, i32* %28, align 4
  %147 = load i32, i32* %29, align 4
  %148 = load i32, i32* %30, align 4
  %149 = load i32, i32* %31, align 4
  %150 = call i32 @HORIZ_8TAP_8WID_4VECS_FILT(i32 %134, i32 %135, i32 %136, i32 %137, i64 %138, i64 %139, i64 %140, i64 %141, i32 %142, i32 %143, i32 %144, i32 %145, i32 %146, i32 %147, i32 %148, i32 %149)
  %151 = load i32, i32* %28, align 4
  %152 = load i32, i32* %29, align 4
  %153 = load i32, i32* %30, align 4
  %154 = load i32, i32* %31, align 4
  %155 = call i32 @SRARI_H4_SH(i32 %151, i32 %152, i32 %153, i32 %154, i32 7)
  %156 = load i32, i32* %28, align 4
  %157 = load i32, i32* %29, align 4
  %158 = load i32, i32* %30, align 4
  %159 = load i32, i32* %31, align 4
  %160 = call i32 @SAT_SH4_SH(i32 %156, i32 %157, i32 %158, i32 %159, i32 7)
  %161 = load i32, i32* %28, align 4
  %162 = load i32, i32* %29, align 4
  %163 = call i64 @PCKEV_XORI128_UB(i32 %161, i32 %162)
  store i64 %163, i64* %26, align 8
  %164 = load i64, i64* %26, align 8
  %165 = load i32*, i32** %9, align 8
  %166 = getelementptr inbounds i32, i32* %165, i64 32
  %167 = call i32 @ST_UB(i64 %164, i32* %166)
  %168 = load i32, i32* %30, align 4
  %169 = load i32, i32* %31, align 4
  %170 = call i64 @PCKEV_XORI128_UB(i32 %168, i32 %169)
  store i64 %170, i64* %26, align 8
  %171 = load i64, i64* %26, align 8
  %172 = load i32*, i32** %9, align 8
  %173 = getelementptr inbounds i32, i32* %172, i64 48
  %174 = call i32 @ST_UB(i64 %171, i32* %173)
  %175 = load i32, i32* %10, align 4
  %176 = load i32*, i32** %9, align 8
  %177 = sext i32 %175 to i64
  %178 = getelementptr inbounds i32, i32* %176, i64 %177
  store i32* %178, i32** %9, align 8
  br label %52

179:                                              ; preds = %52
  ret void
}

declare dso_local i64 @LD_UB(i32*) #1

declare dso_local i32 @LD_SH(i32*) #1

declare dso_local i32 @SPLATI_H4_SB(i32, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @LD_SB(i32*) #1

declare dso_local i32 @__msa_sldi_b(i32, i32, i32) #1

declare dso_local i32 @XORI_B4_128_SB(i32, i32, i32, i32) #1

declare dso_local i32 @HORIZ_8TAP_8WID_4VECS_FILT(i32, i32, i32, i32, i64, i64, i64, i64, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @SRARI_H4_SH(i32, i32, i32, i32, i32) #1

declare dso_local i32 @SAT_SH4_SH(i32, i32, i32, i32, i32) #1

declare dso_local i64 @PCKEV_XORI128_UB(i32, i32) #1

declare dso_local i32 @ST_UB(i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
